Mobile view temp

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,10 @@
     "source.fixAll.eslint":
     true
   },
-  "typescript.tsdk": "node_modules/typescript/lib"
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "workbench.colorCustomizations": {
+    "activityBar.background": "#3C2A0B",
+    "titleBar.activeBackground": "#543B10",
+    "titleBar.activeForeground": "#FDFBF6"
+  }
 }
